      o Do NOT add ipoptr until non-standard install is fixed up.
      o Check all failures reported below are fixed! (As at 2018-03-27
	JN believes they are.)

===================================================================================
NEWS from the optimx package

Some comments apply to deprecated packages optimr on CRAN and optimrx on R-forge

VERSION 2018-12-03
      o Add possibility of using higher f to trigger quadratic inverse interpolation

VERSION 2018-11-23
      o Added Rcgmin2 and lbfgsb3c

VERSION 2018-11-19
      o Added Rvmminq -- quadratic inverse interpolation single step added to
        backtracking line search. Rcgmin could be cleaned up somewhat.

VERSION 2018-07-10
      o Rvmmin convergence codes added to opm.Rd etc.

VERSION 2018-07-10
      o Added proptimr() compact display of result of optimr
      o Some minor changes to vignettes and to message (msg) output for 
        line ending

VERSION 2018-07-06
      o Changed setup of control vector using ctrldefault to allow for use of
	individual method defaults

VERSION 2018-04-17
      o Comments in tests etc. to explain why methods fail
        Add hessian to simple test
      o Split optim() call in optimx() based on have.bounds. Note glitch in 
	optim() for vector vs scalar infinite bounds.
      o Fix Rvmmin for n=1 infinite loop      

VERSION 2018-03-30
      o Cleanup of output from various solvers and fix some minor omissions
	and errors in the returned information
      o Conditional output of nlm diagnostic info.
      o Changed Rvmmin call. Rvmminb and Rvmminu NOT now called separately,
	as user may inadvertently supply inadmissible parameters and get wrong
	answer.
      o Changed optimr() so nlminb() can use ehess() function
      o Replace convcode in optimr() with convergence to align with optim() result
      o axsearch() example added to bdstest.R in tests.
      o Merged optextras package into optimx